# simulor

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-checks.yml  publish.yml
docs/: architecture.md
docs/api/: logging.md
docs/concepts/: level1_data_structure.md  level2_order_book.md  level3_market_by_order.md  symbol_parsing.md  ticks_vs_bars.md
docs/feature/: analytics.md  data.md  execution.md  overfitting.md  performance.md  strategy.md
examples/: buy_and_hold.py  live_trading_longbridge.py
examples/data/: daily_trade_bars.csv
rust/: Cargo.toml
rust/src/: lib.rs
src/simulor/: __init__.py  engine.py
src/simulor/base/: collections.py
src/simulor/core/: connectors.py  protocols.py
src/simulor/data/: csv_feed.py
src/simulor/data/feeds/: __init__.py  live.py  longbridge.py
src/simulor/execution/live/: __init__.py  connectors.py  longbridge.py
